not sure if steps/login done, waiting for layout redesign

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
         </activity>
         <activity android:name=".WalkRunActivity" />
         <activity android:name=".InputHeight"></activity>
+        <activity android:name=".StepCountActivity"></activity>
+
     </application>
 
 </manifest>
