--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".WalkRunActivity" />
         <activity android:name=".InputHeight"></activity>
+        <activity android:name=".Login"></activity>
         <activity android:name=".StepCountActivity"></activity>
 
     </application>
