--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         <activity android:name=".WalkRunActivity" />
         <activity android:name=".InputHeightStepGoal"></activity>
         <activity android:name=".Login"></activity>
-        <activity android:name=".StepCountActivity"></activity>
+        <!--<activity android:name=".StepCountActivity"></activity>-->
 
     </application>
 
