Issue #48: Updated AndroidManifest.xml so ProgressActivity is included

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ProgressActivity" />
         <activity android:name=".WalkRunActivity" />
         <activity android:name=".InputHeightStepGoal"></activity>
         <activity android:name=".Login">
