--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,22 +8,29 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:screenOrientation="portrait"
+        android:configChanges="keyboardHidden|orientation">
         <activity android:name=".PastWalksActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ProgressActivity" />
-        <activity android:name=".WalkRunActivity" />
-        <activity android:name=".InputHeightStepGoal" />
-        <activity android:name=".Login"></activity>
+        <activity android:name=".ProgressActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".WalkRunActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".InputHeightStepGoal"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Login"
+            android:screenOrientation="portrait"></activity>
         <activity android:name=".StepCountActivity"></activity>
     </application>
 
