--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:screenOrientation="portrait"
         android:configChanges="keyboardHidden|orientation">
         <activity android:name=".PastWalksActivity"></activity>
+        <service
+            android:name=".TimeService"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
