--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.team31_personalbest_ms2"
+        applicationId "com.example.team31_personalbest_ms2v2"
         minSdkVersion 18
         targetSdkVersion 28
         versionCode 1
