#2 chatting with friends

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".friendsListActivity"></activity>
         <activity android:name=".PastWalksActivity" />
+        <activity android:name="ChatActivity"/>
 
         <service android:name=".TimeService" />
 
