--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.google.firebase:firebase-messaging:17.4.0'
     testImplementation "org.robolectric:shadows-multidex:4.0.1"
+    testImplementation 'org.mockito:mockito-core:2.7.22'
 }
 
 apply plugin: 'com.google.gms.google-services'
