--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,36 +4,42 @@
 
     <application
         android:allowBackup="true"
+        android:configChanges="keyboardHidden|orientation"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme"
         android:screenOrientation="portrait"
-        android:configChanges="keyboardHidden|orientation">
-        <activity android:name=".PastWalksActivity"></activity>
-        <service
-            android:name=".TimeService"/>
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity android:name=".FriendsProgressActivity"></activity>
+        <activity android:name=".PastWalksActivity" />
+
+        <service android:name=".TimeService" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ProgressActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".WalkRunActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".InputHeightStepGoal"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Login"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".StepCountActivity"></activity>
+        <activity
+            android:name=".ProgressActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".WalkRunActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".InputHeightStepGoal"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Login"
+            android:screenOrientation="portrait" />
+        <activity android:name=".StepCountActivity" />
     </application>
 
 </manifest>
