--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.team31_personalbest_ms2v2">
 
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -17,7 +17,7 @@
         <activity
             android:name=".MockFriendsListActivity"
             android:label="@string/title_activity_mock_friends_list"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".friendsListActivity" />
         <activity android:name=".PastWalksActivity" />
 
@@ -47,7 +47,6 @@
             android:name=".Login"
             android:screenOrientation="portrait" />
         <activity android:name=".StepCountActivity" />
-
     </application>
 
 </manifest>
